--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,7 +14,8 @@
             <h1 class="mb-5">Hi! Here is registry for books</h1>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-            <form>
+
+            <form method="post">
                 <span>Add an author</span>
                 <div class="form-row">
                     <div class="col-12 col-md-9 mb-2 mb-md-0">
@@ -25,8 +26,10 @@
                     </div>
                 </div>
             </form>
+
             <br>
-            <form>
+
+            <form method="post">
                 <span>Add book category</span>
                 <div class="form-row">
                     <div class="col-12 col-md-9 mb-2 mb-md-0">
