--- a/src/main/resources/templates/authors-list.html
+++ b/src/main/resources/templates/authors-list.html
@@ -28,7 +28,7 @@
             </tbody>
         </table>
     </div>
-    <p><a href="/user-create">Create author</a></p>
+    <p><a href="/author-create">Create author</a></p>
 </div>
 </body>
 </html>
