--- a/src/main/resources/templates/author-list.html
+++ b/src/main/resources/templates/author-list.html
@@ -5,10 +5,10 @@
     <title>Authors</title>
 </head>
 <body>
-<div th:switch="${authors}">
-    <h2 th:case="null">No authors found!</h2>
+<div th:switch="${author}">
+    <h2 th:case="null">No author found!</h2>
     <div th:case="*">
-        <h2>Authors</h2>
+        <h2>Author</h2>
         <table>
             <thead>
             <tr>
@@ -18,12 +18,12 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="authors : ${authors}">
-                <td th:text="${authors.id}"></td>
-                <td th:text="${authors.firstName}"></td>
-                <td th:text="${authors.lastName}"></td>
-                <td><a th:href="@{authors-update/{id}(id=${authors.id})}">Edit</a></td>
-                <td><a th:href="@{authors-delete/{id}(id=${authors.id})}">Delete</a></td>
+            <tr th:each="author : ${author}">
+                <td th:text="${author.id}"></td>
+                <td th:text="${author.firstName}"></td>
+                <td th:text="${author.lastName}"></td>
+                <td><a th:href="@{author-update/{id}(id=${author.id})}">Edit</a></td>
+                <td><a th:href="@{author-delete/{id}(id=${author.id})}">Delete</a></td>
             </tr>
             </tbody>
         </table>
