--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <title>Getting Started: Serving Web Content</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -12,50 +12,13 @@
     <div class="row">
         <div class="col-xl-9 mx-auto">
             <h1 class="mb-5">Hi! Here is registry for books</h1>
-        </div>
-        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-
-            <form method="post">
-                <span>Add an author</span>
-                <div class="form-row">
-                    <div class="col-12 col-md-9 mb-2 mb-md-0">
-                        <input type="text" class="form-control form-control-lg" placeholder="Add an author">
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <button type="submit" class="btn btn-block btn-lg btn-primary">Add</button>
-                    </div>
-                </div>
-            </form>
-
-            <br>
-
-            <form method="post">
-                <span>Add book category</span>
-                <div class="form-row">
-                    <div class="col-12 col-md-9 mb-2 mb-md-0">
-                        <input type="text" class="form-control form-control-lg" placeholder="Add book category">
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <button type="submit" class="btn btn-block btn-lg btn-primary">Add</button>
-                    </div>
-                </div>
-            </form>
-            <br>
-            <form>
-                <span>Add book</span>
-                <div class="form-row">
-                    <div class="col-12 col-md-9 mb-2 mb-md-0">
-                        <input type="text" class="form-control form-control-lg" placeholder="Add book">
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <button type="submit" class="btn btn-block btn-lg btn-primary">Add</button>
-                    </div>
-                </div>
-            </form>
+            <div>
+                <td><a th:href="@{author-create}">Create author</a></td>
+                <td><a th:href="@{author}">Show authors</a></td>
+            </div>
         </div>
     </div>
 </div>
 
-</div>
 </body>
 </html>
