book and bookCategory added

--- a/src/main/resources/templates/author-create.html
+++ b/src/main/resources/templates/author-create.html
@@ -24,6 +24,9 @@
         <br>
         <input type="submit" value="Create Author">
     </form>
+    <br>
+    <p><a href="/author">Back to Authors list</a></p>
+    <p><a href="/">Back to home</a></p>
 </div>
 </body>
 </html>
