--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,8 +13,14 @@
         <div class="col-xl-9 mx-auto">
             <h1 class="mb-5">Hi! Here is registry for books</h1>
             <div>
-                <td><a th:href="@{author-create}">Create author</a></td>
-                <td><a th:href="@{author}">Show authors</a></td>
+                <p><a th:href="@{author-create}">Create author</a></p>
+                <p><a th:href="@{author}">Show authors</a></p>
+                <br>
+                <p><a th:href="@{book-category-create}">Add book category</a></p>
+                <p><a th:href="@{book-category}">Show book category</a></p>
+                <br>
+                <p><a th:href="@{book-create}">Add book</a></p>
+                <p><a th:href="@{book}">Show book</a></p>
             </div>
         </div>
     </div>
